--- a/index2.html
+++ b/index2.html
@@ -1,25 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-us">
 <head>
 	<meta charset="utf-8">
-	<tite>hanging artists</tite>
+	
 	<link rel="stylesheet" type="text/java" herf=" " />
 	<link rel="stylesheet" type="text/css" herf=" " />
 	<link rel="stylesheet" type="text/css" herf=" " />
-	<script type="text/javascript" src="hangman.js"></script>
+	
+	 <!-- Bootstrap is used to make game look nicer -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+
+
 </head>
 
 <body>
-	<hd1> Hanging Art</hd1>
+	<h1> Hanging Art</h1>
+	<h2> press a button to start</h2>
+	<div id ="wins">Wins:_</div>
+	<div id = "loses">Loses:_</div>
+	<div id = "guesses">Guessed words:</div>
+
+	<h2 id="underscore">_ _ _ _ _ _ </h2>
 	
-	<div id = "images">
+	<!-- <div id = "images">
 		<img src=" " alt="" height="" width="">
 		<img src=" " alt="" height="" width="">
 		<img src=" " alt="" height="" width="">
 		<img src=" " alt="" height="" width="">
 		<img src=" " alt="" height="" width="">
 		<img src=" " alt="" height="" width="">
-	</div>
+	</div> -->
+	<!-- Adds a link to the javascript file. Loaded at the bottom so it waits for the HTML content to display first.
+	If you put this at the top it will crash, because the HTML IDs won't exist yet.-->
+	<script type="text/javascript" src="hangman.js">
+		
+	</script>
 </body>
 
 </html>
