--- a/index2.html
+++ b/index2.html
@@ -22,17 +22,10 @@
 
 	<h2 id="underscore">_ _ _ _ _ _ </h2>
 	
-	<!-- <div id = "images">
-		<img src=" " alt="" height="" width="">
-		<img src=" " alt="" height="" width="">
-		<img src=" " alt="" height="" width="">
-		<img src=" " alt="" height="" width="">
-		<img src=" " alt="" height="" width="">
-		<img src=" " alt="" height="" width="">
-	</div> -->
+	
 	<!-- Adds a link to the javascript file. Loaded at the bottom so it waits for the HTML content to display first.
 	If you put this at the top it will crash, because the HTML IDs won't exist yet.-->
-	<script type="text/javascript" src="hangman.js">
+	<script type="text/javascript" src="java.js">
 		
 	</script>
 </body>
